syntax = "proto3";

package game;


message IPlayer {
  string id = 1;
  string nickname = 2;
  string godname = 3;
  int32 rid = 4;
  string actorName = 5;
}
// 登录注册
message LoginReq {
  IPlayer player = 1;
}
message LoginRes {
  optional int32 state = 1;
}
message SignInReq {
}
message SignInRes {
  IPlayer player = 1;
}


// 房间列表
message IRoom {
  int32 id = 1;
  string roomName = 2;
  int32 life = 3;
  string mode = 4;
  bool hasPwd = 6;
  string pwd = 7;
  int32 turn = 8;
  repeated IPlayer players = 5;
}
message RoomList {  
  repeated IRoom rooms = 1;
}
message MsgRoom {  
  IRoom room = 1;
}
message ChooseActor {  
  string id = 1;
  string actor = 2;
}
message RoomCreateReq {
  string roomName = 1;
  string pwd = 2;
  int32 life = 3;
  string mode = 4;
}
message RoomCreateRes {
  IRoom room = 1;
}
message RoomListByNameReq {
  string roomName = 1;
}
message RoomListByNameRes {
}
message ApiRoomJoinReq {
  int32 rid = 1;
  optional string pwd = 2;
}
message ApiRoomJoinRes {
  IRoom room = 1;
  string error = 2;
}
message ApiRoomLeaveReq {
}
message ApiRoomLeaveRes {
}

// 选择角色
message ApiChooseActorReq {
  string actor = 1;
}
message ApiChooseActorRes {
}



// 进入游戏
message EnterGameReq {
  string actor = 1;
}
message EnterGameRes {
}
message ApiUseSkillReq {
  int32 key = 1;
  int32 index = 2;
  int32 power = 3;
}
message ApiUseSkillRes {
}
message UseSkill {
  int32 key = 1;
  int32 index = 2;
  int32 power = 3;
  string id = 4;
}